# html-table-scraper

./: .pre-commit-config.yaml  README.md  demo.ipynb  pyproject.toml  scraper.py
.github/workflows/: ci.yml
src/html_table_scraper/: __init__.py  table.py
tests/: test_additional.py  test_parse_table.py  test_scraper.py
