[project]
name = "html-table-scraping"
version = "0.1.0"
description = "A simple module that turns HTML tables into Pandas DataFrames."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4",
    "pandas",
    "ipython",
    "ipython-genutils",
    "lxml",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "pyright",
    "pre-commit",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "off"
reportMissingTypeStubs = false
reportPrivateUsage = false
reportUnknownMemberType = false
extraPaths = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
